# hypothesis-engine

./: .env.example  .gitignore  FEATURES.md  NOUS_INTEGRATION.md  ROADMAP.md  docker-compose.yml  pyproject.toml
data/: glossary.yaml
hermes/: api.py  cli.py
hermes/agent/: graph.py  nodes.py  prompts.py  state.py
hermes/db/: connection.py  history.py
hermes/llm/: provider.py
hermes/semantic/: autoseed.py  dbt.py  embedder.py  glossary.py  kb_loader.py  kb_retriever.py  retriever.py  vector_store.py
hermes/tools/: executor.py  prior_analyses.py  schema.py  stats.py
web/app/: layout.tsx  page.tsx
web/components/: ConnectionsPanel.tsx  FeedbackPrompt.tsx  HistoryDetailPanel.tsx  HistoryPanel.tsx  HypothesisCard.tsx  InvestigationChart.tsx  ReportView.tsx  SchemaPanel.tsx  ThinkingTrace.tsx
web/lib/: types.ts  useInvestigation.ts
